fixed large item spacing

--- a/themes/user-defined-themes.scss
+++ b/themes/user-defined-themes.scss
@@ -1,35 +1,38 @@
-  //based off of the built-in Adventure theme (look for the '@@@' for changes/additions)
-  
+  //based off of the built-in Adventure theme  
   html[data-theme="Tama"] {
     // Main colors
     --primary: #ffffffe6;
     --background: #0b1021;
     --background-darker: #181c3a;
-    --background-darker-transparent: #181c3ad4;  // @@@ added transparent dark color for item/widget/header backgrounds
-    --background-lighter-transparent: #6b6c73c6;  // @@@ added transparent grey color for item/widget backgrounds
+    --background-darker-transparent: #181c3ad4;
+    --background-grey-transparent: #6b6c73c6;
+   
     // Typography
-    --font-headings: 'Segoe UI', 'Podkova', 'Roboto', serif;  // @@@ added Segoe UI
-    --font-body: 'Segoe UI', 'Roboto', serif;  // @@@ added Segoe UI    
+    --font-headings: 'Segoe UI', 'Ariel', 'sans-serif';
+    --font-body: 'Segoe UI', 'Ariel', 'sans-serif';
+   
     // Items
-    --item-background: var(--background-darker-transparent);  // @@@ changed to darker-transparent color
-    --item-background-hover: var(--background-lighter-transparent);  // @@@ changed to lighter-transparent color
+    --item-background: var(--background-darker-transparent);
+    --item-background-hover: var(--background-grey-transparent);
     --item-shadow: 1px 1px 2px #130f23;
     --item-hover-shadow: 2px 2px 4px #130f23;
+   
     // Sections
     --item-group-heading-text-color: var(--white);
     --item-group-heading-text-color-hover: var(--primary);
     --item-group-shadow: none;
     --item-group-background: none;
     --item-group-outer-background: none;
+   
     // Remove background from certain components
     div.home, div.options-outer, div.options-container, section.filter-container,
     section.settings-outer, div.show-hide-container.hide-btn, div.show-hide-container.show-btn  {
       background: none;
     }
+   
     // Style overides
     label.lbl-toggle h3 { font-size: 1.3rem; font-weight: bold; }
     .content-inner { border-top: 1px dashed var(--primary); }
-    a.item.size-large:hover { border-left: 3px solid var(--white); }
     .item.size-large .tile-title p.description { height: 3rem; }
     .is-collapsed {
       background: var(--item-background);
@@ -38,20 +41,29 @@
         background: var(--item-background-hover);
         box-shadow: var(--item-hover-shadow);
       }
-    }
-    
+    }    
+   
     // Background Image
     body {
-      //@@@ changed to random unsplash bkg. update the query terms after the '?', to customize for images you want
+      //update the query terms after the '?', to customize for images you want
       background: url('https://source.unsplash.com/random/1920x1080/?dark,calm,nature,background');
-      background-color: var(--background-darker);  // @@@ added dark bkg color during load
+      background-color: var(--background-darker);
       background-size: cover;      
     }
-
-    // @@@ added to make header, footer, & search form transparent
     header, footer, form.normal { background-color: var(--background-darker-transparent); } 
 
-    // @@@ added widget-base background overrides to match Items bg tiles
+    // section spacing adjustments
+    .collapsable { margin: 0; }
+
+    // large tile spacing adjustment
+    .there-are-items:has(.item-wrapper.wrap-size-large) { padding-top: .25rem; }
+    .item-wrapper.wrap-size-large { margin: 0rem .5rem .5rem 0rem; }
+    .item.size-large .tile-title { padding: 0rem 0rem 0rem .7rem; }
+
+    // Hide open method icon
+    .opening-method-icon { opacity: 0; }
+    
+    // Widget tile style
     .widget-base {
       background-color: var(--background-darker-transparent);
       margin: .5rem .5rem 1rem .5rem;
@@ -60,31 +72,12 @@
       border-radius: var(--curve-factor);
       box-shadow: var(--item-shadow);
     }
-
-    // @@@ added widget-wrap padding overrides
-    .widget-wrap {
-      padding: 1.4rem .8rem .8rem .8rem;
-    }
-
-    // @@@ added widget button overrides to keep them within background perimeter
-    .widget-base button.action-btn {
-      margin-top: .3rem;
-      margin-right: .5rem;
-    }
-
-    // @@@ added to shrink some of the white space between sections
-    .collapsable {
-      margin: 0px;
-    }
-
-    // @@@ added to hide the opening method icon (on bottom right of items)
-    .opening-method-icon {
-      opacity: 0;
-    }
-
-    // @@@ added grow effect for tile-icon <img> & <i>, when hover over parent <a>.item small-sized/medium-size/large-size
+    .widget-base button.action-btn { margin-top: .3rem; margin-right: .5rem; }
+    .widget-wrap { padding: 1.4rem .8rem .8rem .8rem; }
+    
+    // Grow effect for tile-icon <img> & <i> on hover over Item tiles
     .item:hover .item-icon img, .item:hover .item-icon i{
-        transition: all .35s ease-in-out;
-        transform: scale(1.22);  
+      transition: all .35s ease-in-out;
+      transform: scale(1.22);  
     }
   }
